<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.lizaalert.hotline.InputFormActivity" >

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear" />
    <EditText
        android:id="@+id/et_phone"
        android:layout_below="@id/btn_clear"
        android:hint="@string/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:inputType="phone" />
    <EditText
        android:id="@+id/et_city"
        android:layout_below="@id/et_phone"
        android:hint="@string/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:imeOptions="actionNext" />
    <EditText
        android:id="@+id/et_name"
        android:layout_below="@id/et_city"
        android:hint="@string/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:imeOptions="actionNext" />
    <EditText
        android:id="@+id/et_birthday"
        android:layout_below="@id/et_name"
        android:hint="@string/date_of_birth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:inputType="date" />
    <EditText
        android:id="@+id/et_other"
        android:layout_below="@id/et_birthday"
        android:layout_above="@+id/btn_sms"
        android:hint="@string/other"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone" />
    <Button
        android:id="@+id/btn_sms"
        android:layout_above="@+id/btn_email"
        android:text="SMS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_email"
        android:layout_alignParentBottom="true"
        android:text="EMAIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>
